# PharmaTrackPro

./: CMakeLists.txt  README.md  scanner_log.txt
App/: Application.cpp  Application.h  main.cpp
Hardware/: ScannerManager.cpp  ScannerManager.h  SerialPortManager.cpp  SerialPortManager.h
Hardware/Drivers/: EthernetDriver.cpp  EthernetDriver.h  ScannerDriver.cpp  ScannerDriver.h  SerialDriver.cpp  SerialDriver.h
Models/: Batch.cpp  Batch.h  GenerationResult.cpp  GenerationResult.h  ScanLog.cpp  ScanLog.h  ScannerConfiguration.cpp  ScannerConfiguration.h  ScannerInfo.cpp  ScannerInfo.h  SerialNumber.cpp  SerialNumber.h
Services/: GeneratorService.cpp  GeneratorService.h  ScannerConfigurationService.cpp  ScannerConfigurationService.h  ScannerDiscoveryService.cpp  ScannerDiscoveryService.h  ScannerService.cpp  ScannerService.h  VerificationService.cpp  VerificationService.h
UI/: DashboardWindow.cpp  DashboardWindow.h  GeneratorWindow.cpp  GeneratorWindow.h  MainWindow.cpp  MainWindow.h  ReportsWindow.cpp  ReportsWindow.h  ScannerWindow.cpp  ScannerWindow.h  SettingsWindow.cpp  SettingsWindow.h
Utils/: CSVExporter.cpp  CSVExporter.h  FileManager.cpp  FileManager.h  JsonManager.cpp  JsonManager.h  PathManager.cpp  PathManager.h  RandomGenerator.cpp  RandomGenerator.h  TXTExporter.cpp  TXTExporter.h
